--- a/testBoard/pom.xml
+++ b/testBoard/pom.xml
@@ -38,7 +38,16 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.3.3</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.3.0</version>
+		</dependency>
 		<dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
