--- a/testBoard/src/main/resources/application.properties
+++ b/testBoard/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.mvc.view.suffix=.jsp
 
 #Database
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracel:thin:@192.168.0.51:1521:wideorcl
+spring.datasource.url=jdbc:oracle:thin:@192.168.0.51:1521:wideorcl
 spring.datasource.username=ISDA
 spring.datasource.password=ISDA123
