--- a/testBoard/src/main/resources/application.properties
+++ b/testBoard/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@192.168.0.51:1521:wideorcl
 spring.datasource.username=ISDA
 spring.datasource.password=ISDA123
+
+#바로적용
+server.servlet.jsp.init-parameters.development=true
