--- a/testBoard/src/main/resources/application.properties
+++ b/testBoard/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 
+spring.mvc.static-path-pattern=/static/**
+spring.resources.static-locations=classpath:/static/
+spring.resources.add-mappings=true
+
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
