--- a/testBoard/src/main/resources/application.properties
+++ b/testBoard/src/main/resources/application.properties
@@ -8,9 +8,7 @@ spring.mvc.view.suffix=.jsp
 
 #Database
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.0.51:1521:wideorcl
+spring.datasource.url=jdbc:oracle:thin:@wideorcl.crccjxdonbtm.ap-northeast-2.rds.amazonaws.com:1521:ORCL
 spring.datasource.username=ISDA
-spring.datasource.password=ISDA123
+spring.datasource.password=ISDA1234
 
-#바로적용
-server.servlet.jsp.init-parameters.development=true
